--- a/src/blocks/RichText/richtext.module.scss
+++ b/src/blocks/RichText/richtext.module.scss
@@ -66,9 +66,8 @@
   }
 
   @media all and (max-width: 989px) {
-    width: 100%;
-    margin-left: 0;
-    margin-top: 30px;
+    width: auto;
+    margin: 30px 24px 0;
 
     h4 {
       margin: 0px 0 24px;
