--- a/src/components/introtext.module.scss
+++ b/src/components/introtext.module.scss
@@ -16,7 +16,7 @@
   }
 
   @media all and (max-width: 989px) {
-    padding: 100px 0 0;
+    padding: 0;
     margin: 0 24px;
 
     .page-title {
